# paste_rs

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
paste_rs-api/: Cargo.toml
paste_rs-api/src/: lib.rs  util.rs
paste_rs-cli/: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
paste_rs-cli/.github/workflows/: build.yml  release.yml
paste_rs-cli/src/: api.rs  cli.rs  main.rs
paste_rs-cli/src/cache/: mod.rs
paste_rs_api/: Cargo.toml  LICENSE  README.md
paste_rs_api/src/: lib.rs
