[package]
name = "paste_rs-cli"
readme = "README.md"
description = "A simple cli tool for https://paste.rs/"
license = "MIT"
homepage = "https://github.com/Canvas02/paste_rs"
repository = "https://github.com/Canvas02/paste_rs"
keywords = ["cli", "paste"]
categories = ["command-line-utilities"]
authors = ["Canvas02 <Canvas02@protonmail.com>"]
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
paste_rs_api = "~0.1"
