[package]
name = "paste_rs_api"
description = "A simple async rust library for using the api of [paste.rs](https://paste.rs)"
readme = "README.md"
license = "MIT"
authors = ["Canvas02 <Canvas02@protonmail.com>"]
homepage = "https://github.com/Canvas02/paste_rs"
repository = "https://github.com/Canvas02/paste_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
